          hasQuery() and hasScheme() methods.
        - Matrix parameters are now ignored by tunnel service. 
          Contributed by Stephan Koops.
        - Refactored the TunnelService implementation, renamed the 
          "extensionTunnel" to "extensionsTunnel" and added the
          "queryTunnel" property for consistency. 
    - NRE and Extension Enhancements
    - Misc

 - 1.1 Milestone 3 (2008-04-01)
    - Bugs fixed
        - Fixed setRedirectRef(String) method which wasn't supporting 
          relative URIs when no base reference was available on the 
          resource reference. Now it uses the resource reference 
          instead. Reported by Steve Loughran.
        - Made the SpringApplication constructor public. Reported by 
          Peter Neubauer.
        - The AWS authentication wasn't properly detected by the
          engine. Reported by Steve Loughran.
        - Fixed directory redirections in DirectoryResource class.
        - Fixed NPE in RestletFrameworkServlet. Reported by Yuri de Wit
          and fixed by Rhett Sutphin.
        - Fixed socket closing issues with the internal HTTP 
          connectors. Reported and fixed by Kevin Conaway.
        - Fixed potential NPE in CLAP connector. Reported by Rob 
          Heittman. 
        - Fixed potential NPE in Freemarker extension when the 
          template is provided under the form of a representation.
        - Request.getProtocol() now returns the protocol of the 
          targetRef instead of the baseRef when the targetRef itself is
          absolute. Patch contributed by Jeroen Goubert (Schaubroeck).
        - When using new Reference(baseref, "absolute-path"), calling 
          getTargetRef() now returns a reference with the baseRef 
          cleared. Patch contributed by Jeroen Goubert (Schaubroeck).
    - API Enhancements
        - Added OAuth extension as a pluggable authentication scheme.
          Contributed by Adam Rosien.