@@ -74,7 +74,7 @@ public class ServletWarClient extends Client {
      */
     @Override
     public void handle(Request request, Response response) {
-        init(request, response);
+        super.handle(request, response);
         getHelper().handle(request, response);
     }
 
