@@ -113,7 +113,8 @@ public class Client extends Connector {
 
     @Override
     public void handle(Request request, Response response) {
-        init(request, response);
+        super.handle(request, response);
+
         if (getHelper() != null)
             getHelper().handle(request, response);
     }
