@@ -310,7 +310,7 @@ public class Finder extends Restlet {
      */
     @Override
     public void handle(Request request, Response response) {
-        init(request, response);
+        super.handle(request, response);
 
         if (isStarted()) {
             Handler target = findTarget(request, response);
