@@ -464,7 +464,7 @@ public class Router extends Restlet {
      */
     @Override
     public void handle(Request request, Response response) {
-        init(request, response);
+        super.handle(request, response);
 
         Restlet next = getNext(request, response);
         if (next != null) {
