@@ -19,6 +19,9 @@ Changes log
         - Refactored the TunnelService implementation, renamed the 
           "extensionTunnel" to "extensionsTunnel" and added the
           "queryTunnel" property for consistency. 
+        - Deprecated the Restlet.init() method. In Restlet 1.2, this 
+          method will be removed and its logic directly put in the
+          handle(Request, Response) method. 
     - NRE and Extension Enhancements
     - Misc
 
